@@ -2,8 +2,11 @@ Routes Changelog
 ========================
 
 -- 1.3.3 (**SVN**)
+* Fixed bug with map.resource related to member methods, found in Rails version.
 * Fixed bug with map.resource member methods not requiring a member id.
 * Fixed bug related to handling keyword argument controller.
+* Added map.resource command which can automatically generate a batch of routes intended
+  to be used in a REST-ful manner by a web framework.
 * Added URL generation handling for a 'method' argument. If 'method' is specified, it
   is not dropped and will be changed to '_method' for use by the framework.
 * Added conditions option to map.connect. Accepts a dict with optional keyword args
